--- a/recipe.html
+++ b/recipe.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Tracker</title>
+    <title>recipes-nutrition</title>
 </head>
 <body>
     <header>
-        <h1 class="homepage" id="homepage">Food Tracker</h1>
+        <h1 class="homepage" id="homepage">Recipes and Nutrition</h1>
     </header>
     <main>
         <div class="container">
-        <button class="recipes-nutrition" id="recipes-nutrition">Recipes & Nutrition</button>
         <button class="food-log" id="food-log">Food Log</button>
         <button class="location" id="location">I'm Craving...</button>
-        </div>
+        <button class="home" id="home-btn">Home</button>
+    </div>
     </main>
     <footer>
         &copy; 2022 Katelyn Armstrong, Stephanie Ferguson, Leonel Morales, Paul Shertzinger
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="./assets/script.js"></script>
+    <script src="./assets/recipe.js"></script>
 </body>
 </html>
