--- a/index.html
+++ b/index.html
@@ -4,19 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Tracker</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>Lettuce Talk</title>
 </head>
 <body>
     <header>
-        <h1 class="homepage" id="homepage">Food Tracker</h1>
+        <nav>
+            <img class="logo" id="logo" src="./assets/images/Lettuce-Talk-Logo.png" alt="Lettuce Talk pun">
+            <ul>
+                <li class="column">
+                    <button class="button is-primary is-success is-outlined recipes-nutrition" id="recipes-nutrition">Recipes & Nutrition</button>
+                </li>
+                <li class="column">
+                    <button class="button is-primary is-success is-outlined food-log" id="food-log">Food Log</button>
+                </li>
+                <li class="column">
+                    <button class="button is-primary is-success is-outlined location" id="location">I'm Craving...</button>
+                </li>
+            </ul>
+        </nav>
     </header>
+
     <main>
-        <div class="container">
-        <button class="recipes-nutrition" id="recipes-nutrition">Recipes & Nutrition</button>
-        <button class="food-log" id="food-log">Food Log</button>
-        <button class="location" id="location">I'm Craving...</button>
+        <div> 
+            <h2 class="subtitle is-3">Our Purpose</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, beatae eos. Tempore sapiente consequatur dignissimos deserunt quasi nam odio sit ab corporis ipsam nulla, distinctio iste reprehenderit at debitis minima?</p>
+        </div>
+        <div> 
+            <h2 class="subtitle is-3">Why Log?</h2>
+            <p>By tracking what you eat for a given amount of time, you will get a big picture of your eating habits. The log can help you and your doctor understand how your eating habits affect your parts of your daily life such as weight, energy level, or gastro issues. Once you know this, you can make changes to your diet to improve your life.  </p>
         </div>
     </main>
+
+    <br/>
+    <br/>
+
+
     <footer>
         &copy; 2022 Katelyn Armstrong, Stephanie Ferguson, Leonel Morales, Paul Shertzinger
     </footer>
