css bones added to all html pages

--- a/recipe.html
+++ b/recipe.html
@@ -4,18 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>recipes-nutrition</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>Lettuce Talk</title>
+    <link rel="icon" href="./assets/images/Lettuce-Favicon.png">
 </head>
 <body>
     <header>
-        <h1 class="homepage" id="homepage">Recipes and Nutrition</h1>
+        <nav>
+            <img class="logo" id="logo" src="./assets/images/Lettuce-Talk-Logo.png" alt="Lettuce Talk pun">
+            <ul>
+                <li class="column">
+                    <button class="button is-primary is-success is-outlined food-log is-lowercase has-text-centered" id="food-log">Food Log</button>
+                </li>
+                <li class="column">
+                    <button class="button is-primary is-success is-outlined location is-lowercase has-text-centered" id="location">I'm Craving...</button>
+                </li>
+                <li class="column">
+                    <button class="button is-primary is-success is-outlined home is-lowercase has-text-centered" id="home">Home</button>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <div class="container">
-        <button class="food-log" id="food-log">Food Log</button>
-        <button class="location" id="location">I'm Craving...</button>
-        <button class="home" id="home-btn">Home</button>
-    </div>
+        
     </main>
     <footer>
         &copy; 2022 Katelyn Armstrong, Stephanie Ferguson, Leonel Morales, Paul Shertzinger
