--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/style.css">
     <title>Lettuce Talk</title>
+    <link rel="icon" href="./assets/images/Lettuce-Favicon.png">
 </head>
 <body>
     <header>
@@ -14,13 +15,13 @@
             <img class="logo" id="logo" src="./assets/images/Lettuce-Talk-Logo.png" alt="Lettuce Talk pun">
             <ul>
                 <li class="column">
-                    <button class="button is-primary is-success is-outlined recipes-nutrition" id="recipes-nutrition">Recipes & Nutrition</button>
+                    <button class="button is-primary is-success is-outlined recipes-nutrition is-lowercase has-text-centered" id="recipes-nutrition">Recipes & Nutrition</button>
                 </li>
                 <li class="column">
-                    <button class="button is-primary is-success is-outlined food-log" id="food-log">Food Log</button>
+                    <button class="button is-primary is-success is-outlined food-log is-lowercase has-text-centered" id="food-log">Food Log</button>
                 </li>
                 <li class="column">
-                    <button class="button is-primary is-success is-outlined location" id="location">I'm Craving...</button>
+                    <button class="button is-primary is-success is-outlined location is-lowercase has-text-centered" id="location">I'm Craving...</button>
                 </li>
             </ul>
         </nav>
@@ -28,12 +29,15 @@
 
     <main>
         <div> 
-            <h2 class="subtitle is-3">Our Purpose</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, beatae eos. Tempore sapiente consequatur dignissimos deserunt quasi nam odio sit ab corporis ipsam nulla, distinctio iste reprehenderit at debitis minima?</p>
+            <h2 class="subtitle is-3 is-lowercase has-text-centered">Our Purpose</h2>
+            <p class="has-text-centered">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, beatae eos. Tempore sapiente consequatur dignissimos deserunt quasi nam odio sit ab corporis ipsam nulla, distinctio iste reprehenderit at debitis minima?</p>
         </div>
+
+        <br/>
+        
         <div> 
-            <h2 class="subtitle is-3">Why Log?</h2>
-            <p>By tracking what you eat for a given amount of time, you will get a big picture of your eating habits. The log can help you and your doctor understand how your eating habits affect your parts of your daily life such as weight, energy level, or gastro issues. Once you know this, you can make changes to your diet to improve your life.  </p>
+            <h2 class="subtitle is-3 is-lowercase has-text-centered">Why Log?</h2>
+            <p class="has-text-centered">By tracking what you eat for a given amount of time, you will get a big picture of your eating habits. The log can help you and your doctor understand how your eating habits affect your parts of your daily life such as weight, energy level, or gastro issues. Once you know this, you can make changes to your diet to improve your life.  </p>
         </div>
     </main>
 
@@ -41,7 +45,7 @@
     <br/>
 
 
-    <footer>
+    <footer class="has-text-centered">
         &copy; 2022 Katelyn Armstrong, Stephanie Ferguson, Leonel Morales, Paul Shertzinger
     </footer>
 
