--- a/location.html
+++ b/location.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="level">
             <img class="logo" id="logo" src="./assets/images/Lettuce-Talk-Logo.png" alt="Lettuce Talk pun">
-            <ul>
+            <ul class="level-item has-text-centered">
                 <li class="column">
                     <button class="button is-primary is-success is-outlined food-log is-lowercase has-text-centered" id="food-log">Food Log</button>
                 </li>
@@ -29,7 +29,7 @@
     <main>
         
     </main>
-    <footer>
+    <footer class="footer">
         &copy; 2022 Katelyn Armstrong, Stephanie Ferguson, Leonel Morales, Paul Shertzinger
     </footer>
 
