--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="level">
             <img class="logo" id="logo" src="./assets/images/Lettuce-Talk-Logo.png" alt="Lettuce Talk pun">
-            <ul>
+            <ul class="level-item has-text-centered">
                 <li class="column">
                     <button class="button is-primary is-success is-outlined recipes-nutrition is-lowercase has-text-centered" id="recipes-nutrition">Recipes & Nutrition</button>
                 </li>
@@ -28,24 +28,24 @@
     </header>
 
     <main>
-        <div> 
+        <section class="section is-small"> 
             <h2 class="subtitle is-3 is-lowercase has-text-centered">Our Purpose</h2>
             <p class="has-text-centered">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, beatae eos. Tempore sapiente consequatur dignissimos deserunt quasi nam odio sit ab corporis ipsam nulla, distinctio iste reprehenderit at debitis minima?</p>
-        </div>
+        </section>
 
         <br/>
         
-        <div> 
+        <section class="section is-small">
             <h2 class="subtitle is-3 is-lowercase has-text-centered">Why Log?</h2>
             <p class="has-text-centered">By tracking what you eat for a given amount of time, you will get a big picture of your eating habits. The log can help you and your doctor understand how your eating habits affect your parts of your daily life such as weight, energy level, or gastro issues. Once you know this, you can make changes to your diet to improve your life.  </p>
-        </div>
+        </section>
     </main>
 
     <br/>
     <br/>
 
 
-    <footer class="has-text-centered">
+    <footer class="has-text-centered footer">
         &copy; 2022 Katelyn Armstrong, Stephanie Ferguson, Leonel Morales, Paul Shertzinger
     </footer>
 
