css added, ready for java

--- a/foodlog.html
+++ b/foodlog.html
@@ -15,13 +15,13 @@
             <img class="logo" id="logo" src="./assets/images/Lettuce-Talk-Logo.png" alt="Lettuce Talk pun">
             <ul class="level-item has-text-centered">
                 <li class="column">
-                    <button class="button is-primary is-success is-outlined recipes-nutrition is-lowercase has-text-centered" id="recipes-nutrition">Recipes & Nutrition</button>
+                    <button class="button is-success recipes-nutrition is-lowercase has-text-centered" id="recipes-nutrition" style="color: #79C230; background-color: #ffffee; text-decoration: underline;" >Recipes & Nutrition</button>
                 </li>
                 <li class="column">
-                    <button class="button is-primary is-success is-outlined location is-lowercase has-text-centered" id="location">I'm Craving...</button>
+                    <button class="button is-success location is-lowercase has-text-centered" id="location" style="color: #79C230; background-color: #ffffee; text-decoration: underline;">I'm Craving...</button>
                 </li>
                 <li class="column">
-                    <button class="button is-primary is-success is-outlined home is-lowercase has-text-centered" id="home">Home</button>
+                    <button class="button is-success home is-lowercase has-text-centered" id="home" style="color: #79C230; background-color: #ffffee; text-decoration: underline;">Home</button>
                 </li>
             </ul>
         </nav>
@@ -29,7 +29,7 @@
     <main>
         
     </main>
-    <footer class="footer">
+    <footer class="has-text-centered footer" style="background-color: #ffffee; color: #79C230;">
         &copy; 2022 Katelyn Armstrong, Stephanie Ferguson, Leonel Morales, Paul Shertzinger
     </footer>
 
