--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <img class="logo" id="logo" src="./assets/images/Lettuce-Talk-Logo.png" alt="Lettuce Talk pun">
             <ul class="level-item has-text-centered">
                 <li class="column">
-                    <button class="button is-primary is-success is-outlined recipes-nutrition is-lowercase has-text-centered" id="recipes-nutrition">Recipes & Nutrition</button>
+                    <button class="button is-success recipes-nutrition is-lowercase has-text-centered" id="recipes-nutrition" style="color: #79C230; background-color: #ffffee; text-decoration: underline;" >Recipes & Nutrition</button>
                 </li>
                 <li class="column">
-                    <button class="button is-primary is-success is-outlined food-log is-lowercase has-text-centered" id="food-log">Food Log</button>
+                    <button class="button is-success food-log is-lowercase has-text-centered" id="food-log" style="color: #79C230; background-color: #ffffee; text-decoration: underline;">Food Log</button>
                 </li>
                 <li class="column">
-                    <button class="button is-primary is-success is-outlined location is-lowercase has-text-centered" id="location">I'm Craving...</button>
+                    <button class="button is-success location is-lowercase has-text-centered" id="location" style="color: #79C230; background-color: #ffffee; text-decoration: underline;">I'm Craving...</button>
                 </li>
             </ul>
         </nav>
@@ -29,14 +29,14 @@
 
     <main>
         <section class="section is-small"> 
-            <h2 class="subtitle is-3 is-lowercase has-text-centered">Our Purpose</h2>
+            <h2 class="subtitle is-3 is-lowercase has-text-centered" style="color: #fa9500;">Our Purpose</h2>
             <p class="has-text-centered">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, beatae eos. Tempore sapiente consequatur dignissimos deserunt quasi nam odio sit ab corporis ipsam nulla, distinctio iste reprehenderit at debitis minima?</p>
         </section>
 
         <br/>
         
         <section class="section is-small">
-            <h2 class="subtitle is-3 is-lowercase has-text-centered">Why Log?</h2>
+            <h2 class="subtitle is-3 is-lowercase has-text-centered" style="color: #fa9500;">Why Log?</h2>
             <p class="has-text-centered">By tracking what you eat for a given amount of time, you will get a big picture of your eating habits. The log can help you and your doctor understand how your eating habits affect your parts of your daily life such as weight, energy level, or gastro issues. Once you know this, you can make changes to your diet to improve your life.  </p>
         </section>
     </main>
@@ -45,7 +45,7 @@
     <br/>
 
 
-    <footer class="has-text-centered footer">
+    <footer class="has-text-centered footer" style="background-color: #ffffee; color: #79C230;">
         &copy; 2022 Katelyn Armstrong, Stephanie Ferguson, Leonel Morales, Paul Shertzinger
     </footer>
 
