--- a/recipe.html
+++ b/recipe.html
@@ -15,13 +15,13 @@
             <img class="logo" id="logo" src="./assets/images/Lettuce-Talk-Logo.png" alt="Lettuce Talk pun">
             <ul class="level-item has-text-centered">
                 <li class="column">
-                    <button class="button is-primary is-success is-outlined food-log is-lowercase has-text-centered" id="food-log">Food Log</button>
+                    <button class="button is-success food-log is-lowercase has-text-centered" id="food-log" style="color: #79C230; background-color: #ffffee; text-decoration: underline;">Food Log</button>
                 </li>
                 <li class="column">
-                    <button class="button is-primary is-success is-outlined location is-lowercase has-text-centered" id="location">I'm Craving...</button>
+                    <button class="button is-success location is-lowercase has-text-centered" id="location" style="color: #79C230; background-color: #ffffee; text-decoration: underline;">I'm Craving...</button>
                 </li>
                 <li class="column">
-                    <button class="button is-primary is-success is-outlined home is-lowercase has-text-centered" id="home">Home</button>
+                    <button class="button is-success home is-lowercase has-text-centered" id="home" style="color: #79C230; background-color: #ffffee; text-decoration: underline;">Home</button>
                 </li>
             </ul>
         </nav>
@@ -29,10 +29,9 @@
     <main>
         
     </main>
-    <footer class="footer">
+    <footer class="has-text-centered footer" style="background-color: #ffffee; color: #79C230;">
         &copy; 2022 Katelyn Armstrong, Stephanie Ferguson, Leonel Morales, Paul Shertzinger
     </footer>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./assets/recipe.js"></script>
 </body>
