--- a/foodlog.html
+++ b/foodlog.html
@@ -21,8 +21,8 @@
 
         <div class="navbar-menu is-centered" id="navbar-links">
             <div class="navbar-end my-6 py-6">
-                <a class=" navbar-item button is-primary is-success is-outlined recipes-nutrition is-lowercase has-text-centered" id="recipes-nutrition"href="./recipe.html">Recipe and nutrition</a>
-                <a class=" navbar-item button is-primary is-success is-outlined location is-lowercase has-text-centered" id="location"href= "./location.html">Im Craving...</a>
+                <a class=" button is-ghost recipes-nutrition is-lowercase has-text-centered" id="recipes-nutrition" style="background-color: #ffffee; color: #79C230; text-decoration: underline;" href="./recipe.html">Recipe and nutrition</a>
+                <a class=" button is-ghost location is-lowercase has-text-centered" id="location" style="background-color: #ffffee; color: #79C230; text-decoration: underline;" href= "./location.html">Im Craving...</a>
                 
             </div>
 
