--- a/index.html
+++ b/index.html
@@ -43,25 +43,44 @@
 
         <!--Changes Adding random recipe feature -->
         <section class="section">
-            <div class="container ">
-                <div class="columns is-8 is-variable is-centered">
-                    <div class="column is-5-tablet">
+            <div class="container">
+                <div class="columns is-8 is-variable is-centered" >
+                    <div class="column is-5-tablet" >
                         <!--mesage box-->
-                        <div class="message is-primary  px-6 mx-3">
+                        <div class="message is-primary  px-6 mx-3" style="color: #79C230; background-color: #ffffee">
                             <div class="message-header">
-                                <p>Random Meal </p>
+                                <p style="color:#ffffee; background-color: #00D1B2">Random Recipe </p>
                             </div>
                              <div class="message-body" id="random-meal"> 
                                 <p id="desc-food">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed magni rerum minus quo iure
                                     facere alias sunt harum esse laboriosam.</p>
                                 <div class="has-text-centered">
-                                    <button class="button mt-5 is-primary is-medium">Details</button>
+                                    <button class="button mt-5 is-primary is-medium" id="btn-details">Details</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <!--Modal screen to display details-->
+            <div class="modal">
+                <div class="modal-background"></div>
+                <div class="modal-card">
+                  <header class="modal-card-head has-text-primary" style="background-color: #00D1B2">
+                    <p class="modal-card-title" style="color:#ffffee; background-color: #00D1B2">Recipe Details</p>
+                    <button class="delete" id="modal-close" aria-label="close"></button>
+                  </header>
+                  <section class="modal-card-body">
+                  <div class="content">
+
+                  <div>  
+                  </section>
+                  <footer class="modal-card-foot"  style="background-color: #00D1B2">
+                    <button class="button is-danger is-centered" id="btn-close">Close</button>
+                  </footer>
+                </div>
+              
+              </div>
         </section>
 
     <main class="columns">
