fix html and javascript issues with the styling

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p class="modal-card-title" style="color:#ffffee; background-color: #00D1B2">Recipe Details</p>
                     <button class="delete" id="modal-close" aria-label="close"></button>
                   </header>
-                  <section class="modal-card-body">
+                  <section class="modal-card-body" style="background-color: #ffffee">
                   <div class="content">
 
                   <div>  
