--- a/foodlog.html
+++ b/foodlog.html
@@ -38,7 +38,7 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="./assets/log.js"></script>
+    <script src="./assets/js/foodlog.js"></script>
 </body>
 </html>
     
