--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section class="column is-8 is-vcentered section is-small"> 
         <h2 class="subtitle is-3 is-lowercase has-text-centered" style="color: #fa9500;">Our Purpose</h2>
-        <p class="has-text-centered">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, beatae eos. Tempore sapiente consequatur dignissimos deserunt quasi nam odio sit ab corporis ipsam nulla, distinctio iste reprehenderit at debitis minima?</p>
+        <p class="has-text-centered">We are a brand that cares about helping each other build healthy habits around food. Today it can be hard to choose what to cook for dinner and know if you are making a healthy choice. We are here to offer you a place to find recipes with their nutrition facts, log meals with nutrition facts, and locate a store near you if you need an ingredient for your next favorite recipe. </p>
     
         
         <br/>
