--- a/foodlog.html
+++ b/foodlog.html
@@ -85,6 +85,25 @@
             </div>
         </div>
 
+        <br>
+        <div class="container-table">
+            <table class="table is-bordered is-striped is-fullwidth is-hoverable">
+                <tr class="th ">
+                    <thead>
+                        <th>Date</th>
+                        <th>Food</th>
+                        <th>Calories</th>
+                        <th>Carbs</th>
+                        <th>Protein</th>
+                        <th>Fat</th>
+                </tr>
+                </thead>
+                <!--<tr id="table-line">-->
+                <tbody id="table-line">
+                </tbody>
+            </table>
+        </div>
+
     </main>
     <footer class="has-text-centered footer" style="background-color: #ffffee; color: #79C230;">
         &copy; 2022 Katelyn Armstrong, Stephanie Ferguson, Leonel Morales, Paul Shertzinger
