correct the file path and create new recipe.js file

--- a/recipe.html
+++ b/recipe.html
@@ -80,7 +80,7 @@
         &copy; 2022 Katelyn Armstrong, Stephanie Ferguson, Leonel Morales, Paul Shertzinger
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="./assets/recipe.js"></script>
+    <script src="./assets/js/recipe.js"></script>
 </body>
 
 </html>
