nav buttons updated

--- a/recipe.html
+++ b/recipe.html
@@ -24,10 +24,8 @@
 
         <div class="navbar-menu is-centered" id="navbar-links">
             <div class="navbar-end my-6 py-6">
-                <a class=" navbar-item button is-primary is-success is-outlined food-log is-lowercase has-text-centered"
-                    id="food-log" href="./foodlog.html">Food Log</a>
-                <a class=" navbar-item button is-primary is-success is-outlined location is-lowercase has-text-centered"
-                    id="location" href="./location.html">Im Craving...</a>
+                <a class=" button is-ghost food-log is-lowercase has-text-centered" id="food-log" style="background-color: #ffffee; color: #79C230; text-decoration: underline;" href="./foodlog.html">Nutrion Log</a>
+                <a class=" button is-ghost location is-lowercase has-text-centered" id="location" style="background-color: #ffffee; color: #79C230; text-decoration: underline;" href= "./location.html">Find Store </a>
 
             </div>
 
