side bar to food log

--- a/foodlog.html
+++ b/foodlog.html
@@ -33,75 +33,100 @@
 
 
     </nav>
-    <main>
+    <main class="columns">
+        <aside id="sidebar" class="column is-2 aside hero box is-fullheight">
+
+            <div class="compose has-text-centered">
+
+                <h2>Ads</h2>
+
+            </div>
+            <div class="compose has-text-centered is-vcentered is-fullheight">
+                <p>Give us money!!</p>
+            </div>
+
+        </aside>
         <!--Changes Add search container and button-->
-        <div class="section pt-3 pb-3 mx-1 my-1">
-            <div class="container has-text-centered">
-                <h1 class="is-size-3  is-centered" style="color: #79C230"">Food Search</h1>
-                <button class=" button is-dark is-rounded" id="search-food">Search</button>
-            </div>
-        </div>
-
-        <!--Changes modal screen-->
-        <!--Modal-->
-        <div class="modal">
-            <div class="modal-background "></div>
-            <div class="modal-content has-text-light py-5 px-5" style="color: #79C230; background-color: #ffffee">
-                <h3 class="title mb-6">Food Search</h3>
-                <form id="form-search">
-                    <div class="field">
-                        <label class="label">Food:</label>
-                        <div class="control">
-                            <input type="text" class="input" placeholder="Name" id="text-search">
-                        </div>
-                        <div class="mt-6 has-text-centered">
-                            <button class="button is-dark" id="search-log">Search</button>
-                        </div>
-
-                    </div>
-                </form>
-
-                <div id="modal-table">
-                    <table class="table is-bordered is-striped is-fullwidth is-hoverable">
-                        <tr class="th is-selected">
-                            <thead>
-                                <th>Food</th>
-                                <th>Calories</th>
-                                <th>Carbs</th>
-                                <th>Protein</th>
-                                <th>Fat</th>
-                        </tr>
-                        </thead>
-                        <!-- <tr id="modal-line">-->
-                        <tbody id="modal-line">
-                        </tbody>
-
-                    </table>
+        <section class="column is-centered is-8 is-vcentered section is-small">
+            <div class="section pt-3 pb-3 mx-1 my-1">
+                <div class="container has-text-centered">
+                    <h1 class="is-size-3  is-centered" style="color: #79C230">Food Search</h1>
+                    <button class=" button is-dark is-rounded" id="search-food">Search</button>
                 </div>
-
-                <button class="modal-close is-large" aria-label="close">Model</button>
             </div>
-        </div>
 
-        <br>
-        <div class="container-table">
-            <table class="table is-bordered is-striped is-fullwidth is-hoverable">
-                <tr class="th ">
-                    <thead>
-                        <th>Date</th>
-                        <th>Food</th>
-                        <th>Calories</th>
-                        <th>Carbs</th>
-                        <th>Protein</th>
-                        <th>Fat</th>
-                </tr>
-                </thead>
-                <!--<tr id="table-line">-->
-                <tbody id="table-line">
-                </tbody>
-            </table>
-        </div>
+            <!--Changes modal screen-->
+            <!--Modal-->
+            <div class="modal">
+                <div class="modal-background "></div>
+                <div class="modal-content has-text-light py-5 px-5" style="color: #79C230; background-color: #ffffee">
+                    <h3 class="title mb-6">Food Search</h3>
+                    <form id="form-search">
+                        <div class="field">
+                            <label class="label">Food:</label>
+                            <div class="control">
+                                <input type="text" class="input" placeholder="Name" id="text-search">
+                            </div>
+                            <div class="mt-6 has-text-centered">
+                                <button class="button is-dark" id="search-log">Search</button>
+                            </div>
 
+                        </div>
+                    </form>
+
+                    <div id="modal-table">
+                        <table class="table is-bordered is-striped is-fullwidth is-hoverable">
+                            <tr class="th is-selected">
+                                <thead>
+                                    <th>Food</th>
+                                    <th>Calories</th>
+                                    <th>Carbs</th>
+                                    <th>Protein</th>
+                                    <th>Fat</th>
+                            </tr>
+                            </thead>
+                            <!-- <tr id="modal-line">-->
+                            <tbody id="modal-line">
+                            </tbody>
+
+                        </table>
+                    </div>
+
+                    <button class="modal-close is-large" aria-label="close">Model</button>
+                </div>
+            </div>
+
+            <br>
+            <div class="container-table">
+                <table class="table is-bordered is-striped is-fullwidth is-hoverable">
+                    <tr class="th ">
+                        <thead>
+                            <th>Date</th>
+                            <th>Food</th>
+                            <th>Calories</th>
+                            <th>Carbs</th>
+                            <th>Protein</th>
+                            <th>Fat</th>
+                    </tr>
+                    </thead>
+                    <!--<tr id="table-line">-->
+                    <tbody id="table-line">
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <aside id="sidebar" class="column is-2 aside hero box is-fullheight">
+
+            <div class="compose has-text-centered">
+
+                <h2>Ads</h2>
+
+            </div>
+            <div class="compose has-text-centered is-vcentered is-fullheight">
+                <p>Give us money!!</p>
+            </div>
+
+        </aside>
     </main>
     <footer class="has-text-centered footer" style="background-color: #ffffee; color: #79C230;">
         &copy; 2022 Katelyn Armstrong, Stephanie Ferguson, Leonel Morales, Paul Shertzinger
