--- a/location.html
+++ b/location.html
@@ -55,14 +55,14 @@
                     function GetMap() {
                         map = new Microsoft.Maps.Map('#myMap', {
                             credentials: 'ArrXVS9tBqxMsaC7kak_u6KXH9cBWlwJX7TwwSmscPhqu49ammtN20q2Vh45JkVQ',
-                            center: new Microsoft.Maps.Location(47.60357, -122.32945)
+                            center: new Microsoft.Maps.Location(36.144489564957375, -86.80336681574825)
                         }); 
                         var center = map.getCenter();
                 
                         //Create an infobox that will render in the center of the map.
                         var infobox = new Microsoft.Maps.Infobox(center, {
                             title: 'Map Center',
-                            description: 'Seattle'
+                            description: 'Vanderbilt'
                         });
                 
                         //Assign the infobox to a map instance.
