add logic to search recipe, fix some issues and display into cards using jquery to build the cards

--- a/recipe.html
+++ b/recipe.html
@@ -72,7 +72,7 @@
         </div>
 
 
-        <section class="section" id="section-cards">
+        <section class="section" id="section-cards" style="background-color: #ffffff;"">
 
         </section>
     </main>
