side bars vanish mobile

--- a/foodlog.html
+++ b/foodlog.html
@@ -34,7 +34,7 @@
 
     </nav>
     <main class="columns">
-        <aside id="sidebar" class="column is-2 aside hero box is-fullheight">
+        <aside id="sidebar" class="column is-2 aside hero box is-fullheight is-hidden-touch">
 
             <div class="compose has-text-centered">
 
@@ -115,7 +115,7 @@
                 </table>
             </div>
         </section>
-        <aside id="sidebar" class="column is-2 aside hero box is-fullheight">
+        <aside id="sidebar" class="column is-2 aside hero box is-fullheight is-hidden-touch">
 
             <div class="compose has-text-centered">
 
