--- a/recipe.html
+++ b/recipe.html
@@ -34,7 +34,7 @@
 
     </nav>
     <main class="columns">
-        <aside id="sidebar" class="column is-2 aside hero box is-fullheight">
+        <aside id="sidebar" class="column is-2 aside hero box is-fullheight is-hidden-touch">
 
             <div class="compose has-text-centered">
 
@@ -84,7 +84,7 @@
 
             <section class="section" id="section-cards" style="background-color: #ffffff;"></section>
         </section>
-            <aside id="sidebar" class="column is-2 aside hero box is-fullheight">
+            <aside id="sidebar" class="column is-2 aside hero box is-fullheight is-hidden-touch">
 
                 <div class="compose has-text-centered">
     
