--- a/recipe.html
+++ b/recipe.html
@@ -13,26 +13,27 @@
 
 <body>
     <nav class="navbar has-shadow">
-        <!--Logo-->
+        <!--Logo / Brand -->
         <div class="navbar-brand">
             <a class="navbar-item" href="./index.html">
-                <img src="./assets/images/LettuceTalk.png" id="logo" style="max-height: 250px" class="py-2 px-2"
-                    alt="Lettuce Talk pun">
+                <img src="./assets/images/LettuceTalk.png" id="logo" style="max-height: 250px" class="py-2 px-2" alt="Lettuce Talk pun">
             </a>
-
+            <a class="navbar-burger" id="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
         </div>
 
-        <div class="navbar-menu is-centered" id="navbar-links">
+        <div class="navbar-menu is-centered" id="nav-links">
             <div class="navbar-end my-6 py-6">
-                <a class=" button is-ghost food-log is-lowercase has-text-centered" id="food-log" style="background-color: #ffffee; color: #79C230; text-decoration: underline;" href="./foodlog.html">Nutrion Log</a>
-                <a class=" button is-ghost location is-lowercase has-text-centered" id="location" style="background-color: #ffffee; color: #79C230; text-decoration: underline;" href= "./location.html">Find Store </a>
-
+                <a class=" navbar-item button is-primary is-success is-outlined food-log is-lowercase has-text-centered" id="food-log"href="./foodlog.html"> nutrition Log</a>
+                <a class=" navbar-item button is-primary is-success is-outlined location is-lowercase has-text-centered" id="location"href= "./location.html">Search Stores...</a>
             </div>
-
         </div>
-
-
     </nav>
+
+    <!--Nav End-->
     <main class="columns">
         <aside id="sidebar" class="column is-2 aside hero box is-fullheight is-hidden-touch">
 
@@ -102,6 +103,7 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./assets/js/recipe.js"></script>
+    <script src="./assets/js/burger.js"></script>
 </body>
 
 </html>
