changes on location format style for locations and add the error mensaje

--- a/location.html
+++ b/location.html
@@ -81,10 +81,10 @@
 
             <div id="myMap" style="position:sticky;width:600px;height:400px; background-color: #ffffff;"></div>
             <div class="section pt-3 pb-3 mx-1 my-1">
-                <div class="container">
-                    <ul class="class-log" id="list-market">
+                <div class="container" id="container-market">
+                   <!--<ul class="class-log" id="list-market">
                         <li></li>
-                    </ul>
+                    </ul>--> 
                 </div>
             </div>
         </section>
