--- a/recipe.html
+++ b/recipe.html
@@ -82,7 +82,7 @@
             </div>
 
 
-            <section class="section" id="section-cards" style="background-color: #ffffff;"></section>
+            <section class="section" id="section-cards" style="background-color: #ffffee;"></section>
         </section>
             <aside id="sidebar" class="column is-2 aside hero box is-fullheight is-hidden-touch">
 
