fix issues on styles

--- a/foodlog.html
+++ b/foodlog.html
@@ -57,6 +57,7 @@
 
             <!--Changes modal screen-->
             <!--Modal-->
+
             <div class="modal">
                 <div class="modal-background "></div>
                 <div class="modal-content has-text-light py-5 px-5" style="color: #79C230; background-color: #ffffee">
@@ -73,16 +74,17 @@
 
                         </div>
                     </form>
+                    
 
-                    <div id="modal-table">
+                    <div id="modal-table" style="background-color:#4a4a4a">
                         <table class="table is-bordered is-striped is-fullwidth is-hoverable">
                             <tr class="th is-selected">
                                 <thead>
-                                    <th>Food</th>
-                                    <th>Calories</th>
-                                    <th>Carbs</th>
-                                    <th>Protein</th>
-                                    <th>Fat</th>
+                                    <th class="has-background-grey-dark has-text-white-bis">Food</th>
+                                    <th class="has-background-grey-dark has-text-white-bis">Calories</th>
+                                    <th class="has-background-grey-dark has-text-white-bis">Carbs</th>
+                                    <th class="has-background-grey-dark has-text-white-bis">Protein</th>
+                                    <th class="has-background-grey-dark has-text-white-bis">Fat</th>
                             </tr>
                             </thead>
                             <!-- <tr id="modal-line">-->
@@ -99,14 +101,14 @@
             <br>
             <div class="container-table">
                 <table class="table is-bordered is-striped is-fullwidth is-hoverable">
-                    <tr class="th ">
+                    <tr class="th has-background-dark" style="background-color:#4a4a4a">
                         <thead>
-                            <th>Date</th>
-                            <th>Food</th>
-                            <th>Calories</th>
-                            <th>Carbs</th>
-                            <th>Protein</th>
-                            <th>Fat</th>
+                            <th class="has-background-grey-dark has-text-white-bis">Date</th>
+                            <th class="has-background-grey-dark has-text-white-bis">Food</th>
+                            <th class="has-background-grey-dark has-text-white-bis">Calories</th>
+                            <th class="has-background-grey-dark has-text-white-bis">Carbs</th>
+                            <th class="has-background-grey-dark has-text-white-bis">Protein</th>
+                            <th class="has-background-grey-dark has-text-white-bis">Fat</th>
                     </tr>
                     </thead>
                     <!--<tr id="table-line">-->
