fix issues with the error messages

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                     </div>
                 </div>
                 <!--Modal screen to display details-->
-                <div class="modal">
+                <div class="class-info modal">
                     <div class="modal-background"></div>
                     <div class="modal-card">
-                    <header class="modal-card-head has-text-primary" style="background-color: #00D1B2">
+                    <header class="modal-card-head has-text-primary" id="food-ran" style="background-color: #00D1B2">
                         <p class="modal-card-title" style="color:#ffffee; background-color: #00D1B2">Recipe Details</p>
                         <button class="delete" id="modal-close" aria-label="close"></button>
                     </header>
@@ -83,7 +83,7 @@
 
                     <div>  
                     </section>
-                    <footer class="modal-card-foot"  style="background-color: #00D1B2">
+                    <footer class="modal-card-foot"  id="food-ran"  style="background-color: #00D1B2">
                         <button class="button is-danger is-centered" id="btn-close">Close</button>
                     </footer>
                     </div>
@@ -131,7 +131,7 @@
                     </footer>
                 </div>
 
-            </div>     
+            </div>
         </section>
 
 
