add https to location on api

--- a/location.html
+++ b/location.html
@@ -76,7 +76,7 @@
                     infobox.setMap(map);
                 }
             </script>
-            <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap' async
+            <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap' async
                 defer></script>
 
             <div id="myMap" style="position:sticky;width:600px;height:400px; background-color: #ffffff;"></div>
